Fix files table row border radius on small screens

--- a/web/src/pages/FilesPage.scss
+++ b/web/src/pages/FilesPage.scss
@@ -71,6 +71,13 @@
             }
           }
         }
+
+        td.size {
+          @include screen-max-small {
+            border-top-right-radius: $border-radius;
+            border-bottom-right-radius: $border-radius;
+          }
+        }
       }
 
       .drop-overlay {
